syntax = "proto3";

option go_package = "sigmaos/kernelsrv/proto";

message BootRequest {
  string name = 1;
  repeated string args = 2;
}

message BootResult {
}

message ShutdownRequest {
}

message ShutdownResult {
}

message KillRequest {
  string name = 1;
}

message KillResult {
}


